test to fix spacing on form in mobile

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -21,6 +21,12 @@ $white: #ffffff;
   padding: 0;
 }
 
+input,
+textarea {
+  display: block;
+  margin: 0;
+}
+
 html {
   font-size: 62.5%;
 }
