--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,12 @@
   padding: 0;
 }
 
+input,
+textarea {
+  display: block;
+  margin: 0;
+}
+
 html {
   font-size: 62.5%;
 }
